Setup dependencies and docs

--- a/.env.example
+++ b/.env.example
@@ -11,7 +11,7 @@
 
 # Next Auth
 # You can generate a new secret on the command line with:
-# npx auth secret
+# pnpx auth secret
 # https://next-auth.js.org/configuration/options#secret
 AUTH_SECRET=""
 
