--- a/.env.example
+++ b/.env.example
@@ -20,4 +20,4 @@ AUTH_DISCORD_ID=""
 AUTH_DISCORD_SECRET=""
 
 # Drizzle
-DATABASE_URL="mysql://root:password@localhost:3306/guide"
+DATABASE_URL=postgresql://postgres:password@localhost:5432/guide
