--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "preview": "next build && next start",
     "start": "next start",
     "typecheck": "tsc --noEmit",
-    "fetch-courses": "tsx scripts/fetch-courses.ts"
+    "fetch-courses": "tsx scripts/fetch-courses/fetch-courses.ts"
   },
   "dependencies": {
     "@auth/drizzle-adapter": "^1.7.2",
@@ -31,9 +31,9 @@
     "@trpc/react-query": "^11.0.0",
     "@trpc/server": "^11.0.0",
     "drizzle-orm": "^0.41.0",
-    "mysql2": "^3.11.0",
     "next": "^15.2.3",
     "next-auth": "5.0.0-beta.25",
+    "pg": "^8.16.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "server-only": "^0.0.1",
@@ -44,6 +44,7 @@
     "@eslint/eslintrc": "^3.3.1",
     "@tailwindcss/postcss": "^4.0.15",
     "@types/node": "^20.14.10",
+    "@types/pg": "^8.15.4",
     "@types/react": "^19.0.0",
     "@types/react-dom": "^19.0.0",
     "dotenv": "^16.5.0",
