--- a/.env.example
+++ b/.env.example
@@ -21,3 +21,5 @@ AUTH_DISCORD_SECRET=""
 
 # Drizzle
 DATABASE_URL=postgresql://postgres:password@localhost:5432/guide
+
+UWATERLOO_OPENDATA_API_KEY="REPLACEME"
