--- a/package.json
+++ b/package.json
@@ -33,7 +33,7 @@
     "drizzle-orm": "^0.41.0",
     "next": "^15.2.3",
     "next-auth": "5.0.0-beta.25",
-    "pg": "^8.16.0",
+    "postgres": "^3.4.7",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "server-only": "^0.0.1",
@@ -44,7 +44,6 @@
     "@eslint/eslintrc": "^3.3.1",
     "@tailwindcss/postcss": "^4.0.15",
     "@types/node": "^20.14.10",
-    "@types/pg": "^8.15.4",
     "@types/react": "^19.0.0",
     "@types/react-dom": "^19.0.0",
     "dotenv": "^16.5.0",
