--- a/package.json
+++ b/package.json
@@ -18,9 +18,11 @@
     "preview": "next build && next start",
     "start": "next start",
     "typecheck": "tsc --noEmit",
-    "fetch-courses": "tsx scripts/fetch-courses/fetch-courses.ts"
+    "fetch-courses": "tsx scripts/fetch-courses/fetch-courses.ts",
+    "seed": "tsx scripts/seed/seed.ts"
   },
   "dependencies": {
+    "@auth/core": "^0.39.1",
     "@auth/drizzle-adapter": "^1.7.2",
     "@geist-ui/core": "^2.3.8",
     "@geist-ui/icons": "^1.0.2",
@@ -30,9 +32,11 @@
     "@trpc/client": "^11.0.0",
     "@trpc/react-query": "^11.0.0",
     "@trpc/server": "^11.0.0",
+    "@types/pg": "^8.15.4",
     "drizzle-orm": "^0.41.0",
     "next": "^15.2.3",
     "next-auth": "5.0.0-beta.25",
+    "pg": "^8.16.0",
     "postgres": "^3.4.7",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
@@ -55,6 +59,7 @@
     "prettier": "^3.5.3",
     "prettier-plugin-tailwindcss": "^0.6.11",
     "tailwindcss": "^4.0.15",
+    "ts-node": "^10.9.2",
     "tsx": "^4.19.4",
     "typescript": "^5.8.2",
     "typescript-eslint": "^8.27.0"
