--- a/package.json
+++ b/package.json
@@ -38,12 +38,14 @@
     "@trpc/server": "^11.0.0",
     "@types/pg": "^8.15.4",
     "drizzle-orm": "^0.41.0",
+    "konva": "^9.3.20",
     "next": "^15.2.3",
     "next-auth": "5.0.0-beta.25",
     "pg": "^8.16.0",
     "postgres": "^3.4.7",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-konva": "^19.0.6",
     "server-only": "^0.0.1",
     "superjson": "^2.2.1",
     "zod": "^3.24.2"
