--- a/package.json
+++ b/package.json
@@ -36,7 +36,9 @@
     "@trpc/client": "^11.0.0",
     "@trpc/react-query": "^11.0.0",
     "@trpc/server": "^11.0.0",
+    "@types/d3": "^7.4.3",
     "@types/pg": "^8.15.4",
+    "d3": "^7.9.0",
     "drizzle-orm": "^0.44.2",
     "konva": "^9.3.20",
     "next": "^15.2.3",
