--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "d3": "^7.9.0",
     "drizzle-orm": "^0.44.2",
     "konva": "^9.3.20",
+    "lucide-react": "^0.525.0",
     "next": "^15.2.3",
     "next-auth": "5.0.0-beta.25",
     "pg": "^8.16.0",
